# CPE487587_DLHW

./: .gitignore  Cargo.toml  README.md  pyproject.toml
results_acc/: acc_model.onnx  acc_model.onnx.data  hw03_q7_acc.pt  hw03_q7_norm.json
results_genmodel/: Diffusion_epoch_10.onnx  Diffusion_epoch_10.onnx.data  Diffusion_epoch_15.onnx  Diffusion_epoch_15.onnx.data  Diffusion_epoch_20.onnx  Diffusion_epoch_20.onnx.data  Diffusion_epoch_5.onnx  Diffusion_epoch_5.onnx.data  Diffusion_metrics.csv  GAN_epoch_10.onnx  GAN_epoch_15.onnx  GAN_epoch_20.onnx  GAN_epoch_5.onnx  GAN_metrics.csv  VAE_epoch_10.onnx  VAE_epoch_15.onnx  VAE_epoch_20.onnx  VAE_epoch_5.onnx  VAE_metrics.csv
scripts/: acc_impl.py  acc_impl.sh  binaryclassification_animate_impl.sh  binaryclassification_impl.py  genmodel_impl.py  genmodel_impl.sh  genmodel_inference_impl.py  imagenet_impl.py  imagenet_impl.sh  imagenet_inference.py  malwaredatadownload.sh  multiclass_eval.py  multiclass_impl.py  multiclass_impl.sh
src/: lib.rs
src/cpe487587hw/: __init__.py  _core.pyd
src/cpe487587hw/animation/: __init__.py  largewt_animation.py  weight_animation.py
src/cpe487587hw/deepl/: __init__.py  acc classifier.py  acc_classifier.py  gen_model.py  multiclass.py  two_layer_binary_classification.py
src/cpe487587hw/scripts/: binaryclassification_animate_impl.py
