[project]
name = "cpe487587hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wonderingpanda510gh", email = "wonderingpanda510@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "manim>=0.19.2",
    "matplotlib>=3.10.8",
    "onnx>=1.20.1",
    "polars>=1.37.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]

[tool.maturin]
module-name = "cpe487587hw._core"
python-packages = ["cpe487587hw"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
